# talks

./: .gitignore
emacs-use-package/: slides.org
hakyll-intro/: LICENSE  README.md  hakyll-intro.cabal  package.json  slides.org
hakyll-intro/ejemplos/: ejemplo1.hs  ejemplo2.hs  ejemplo3.hs  ejemplo4.hs  ejemplo5.hs  ejemplo6.hs  ejemplo7.hs  ejemplo8.hs
hakyll-intro/pages/: index.html  index.md
hakyll-intro/posts/: bye-world.md  hello-world.md
hakyll-intro/src/: Main.hs
hakyll-intro/static/css/: bg-color.css
hakyll-intro/static/less/: bg-color.less  color.less
hakyll-intro/templates/: default.html
