name:                hakyll-intro
version:             0.1.0.0
synopsis:            Examples of my talk: "Introduction to Hakyll"
homepage:            https://github.com/anler/talks/tree/master/hakyll-intro#readme
license:             BSD3
license-file:        LICENSE
author:              Anler Hernández Peral
maintainer:          inbox+talks@anler.me
copyright:           2017 Anler Hernández Peral
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable site
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                     , process

